--- a/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
@@ -29,7 +29,15 @@
 
         <div class="row card-row">
             <div class="col s12 m6">
-                <span class="card-info card-event-detail-info"><i class="fa fa-calendar-times-o"></i> @Html.DisplayFor(modelItem => Model.FechaInicio) - @Html.DisplayFor(modelItem => Model.FechaFin)</span>
+                @if (Model.FechaFin == Model.FechaInicio)
+                {
+                    <span class="card-info card-event-detail-info"><i class="fa fa-calendar-times-o"></i> @Html.DisplayFor(modelItem => Model.FechaInicio)</span>
+                }
+                else
+                {
+                    <span class="card-info card-event-detail-info"><i class="fa fa-calendar-times-o"></i> @Html.DisplayFor(modelItem => Model.FechaInicio) al @Html.DisplayFor(modelItem => Model.FechaFin)</span>
+                }
+
             </div>
             <div class="col s12 m6">
                 <span class="card-info card-event-detail-info"><i class="fa fa-clock-o"></i> @Html.DisplayFor(modelItem => Model.HoraInicio) - @Html.DisplayFor(modelItem => Model.HoraFin)</span>
@@ -46,7 +54,7 @@
         </div>
         <hr />
 
-        <div id = "map" style="width:100%;height:300px;"></div>
+        <div id="map" style="width:100%;height:300px;"></div>
         <hr />
 
     </div>
@@ -66,42 +74,42 @@
 
 
 <script>
-            // Note: This example requires that you consent to location sharing when
-            // prompted by your browser. If you see the error "The Geolocation service
-            // failed.", it means you probably did not give permission for the browser to
-            // locate you.
+    // Note: This example requires that you consent to location sharing when
+    // prompted by your browser. If you see the error "The Geolocation service
+    // failed.", it means you probably did not give permission for the browser to
+    // locate you.
 
-            function initMap() {
+    function initMap() {
 
-                var map = new google.maps.Map(document.getElementById('map'), {
-                    center: { lat:@Model.lat, lng: @Model.lng },
-                    zoom: 15
-                });
+        var map = new google.maps.Map(document.getElementById('map'), {
+            center: { lat:@Model.lat, lng: @Model.lng },
+            zoom: 15
+        });
 
-                var infoWindow = new google.maps.InfoWindow({ map: map });
-
-
-                var myMarker = new google.maps.Marker({
-                    position: new google.maps.LatLng(@Model.lat, @Model.lng),
-                    draggable: false
-                });
+        var infoWindow = new google.maps.InfoWindow({ map: map });
 
 
-                map.setCenter(myMarker.position);
-                myMarker.setMap(map);
+        var myMarker = new google.maps.Marker({
+            position: new google.maps.LatLng(@Model.lat, @Model.lng),
+            draggable: false
+        });
 
-                //--------------------------------------------------------------------
-                google.maps.event.addListener(myMarker, 'dragend', function (evt) {
-                    $('#lat').val(evt.latLng.lat().toFixed(3));
-                    $('#lng').val(evt.latLng.lng().toFixed(3));
-                });
 
-                google.maps.event.addListener(myMarker, 'dragstart', function (evt) {
-                    document.getElementById('lat').innerHTML = 'Currently dragging marker...';
-                });
+        map.setCenter(myMarker.position);
+        myMarker.setMap(map);
 
-                //-----------------------------------------------------------------------
-            }
+        //--------------------------------------------------------------------
+        google.maps.event.addListener(myMarker, 'dragend', function (evt) {
+            $('#lat').val(evt.latLng.lat().toFixed(3));
+            $('#lng').val(evt.latLng.lng().toFixed(3));
+        });
+
+        google.maps.event.addListener(myMarker, 'dragstart', function (evt) {
+            document.getElementById('lat').innerHTML = 'Currently dragging marker...';
+        });
+
+        //-----------------------------------------------------------------------
+    }
 
 </script>
 
