--- a/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <hr />
+        <br />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
@@ -34,43 +34,56 @@
             @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
         </div>
 
-        <div class="input-field col-md-12 s12">
-            @Html.LabelFor(model => model.FechaInicio, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaInicio, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+        <div class="row">
+            <div class="input-field col s6">
+                @Html.LabelFor(model => model.FechaInicio, htmlAttributes: new { @class = "active" })
+                @Html.EditorFor(model => model.FechaInicio, new { htmlAttributes = new { @class = "datepicker" } })
                 @Html.ValidationMessageFor(model => model.FechaInicio, "", new { @class = "text-danger" })
             </div>
+            <div class="input-field col s6">
+                <input class="text-box single-line col-2" id="HoraInicio" name="HoraInicio" type="time" value="@Model.HoraInicio" />
+                <label for="last_name" class="active">Hora inicio</label>
+            </div>
         </div>
 
-        <div class="input-field col-md-12 s12">
-            <h6> Hora Inicio:</h6>
-            <input class="text-box single-line col-2" id="HoraInicio" name="HoraInicio" type="time" value="@Model.HoraInicio" />
-        </div>
-
-        <div class="input-field col-md-12 s12">
-            @Html.LabelFor(model => model.FechaFin, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaFin, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+        <div class="row">
+            <div class="input-field col s6">
+                @Html.LabelFor(model => model.FechaFin, htmlAttributes: new { @class = "active" })
+                @Html.EditorFor(model => model.FechaFin, new { htmlAttributes = new { @class = "datepicker" } })
                 @Html.ValidationMessageFor(model => model.FechaFin, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="input-field col-md-12 s12">
-            <h6> Hora Fin:</h6>
-            <input class="text-box single-line col-2" id="HoraFin" name="HoraFin" type="time" value="@Model.HoraFin" />
-        </div>
-
-        <div class="input-field col-md-12 s12">
-            @Html.EnumDropDownListFor(model => model.IdCategoria, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.IdCategoria, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-10">
-                @Html.CheckBoxFor(model => model.Destacado, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.LabelFor(model => model.Destacado, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="input-field col s6">
+                <input class="text-box single-line col-2" id="HoraFin" name="HoraFin" type="time" value="@Model.HoraFin" />
+                <label for="last_name" class="active">Hora fin</label>
             </div>
         </div>
+
+        @Html.EnumDropDownListFor(model => model.IdCategoria, null, new { @class = "form-control" })
+
+        <script>$(document).ready(function () {
+                        $('select').material_select();
+                    });</script>
+
+        <div class="form-group">
+            @Html.CheckBoxFor(m => m.Destacado, new { @type = "checkbox", @id = "Destacado", @name = "Destacado" })
+            <label for="Destacado">Evento destacado</label>
+        </div>
+
+        <!--Script para los checkbox-->
+        <script>
+                    $(document).ready(function () {
+                        $('input[type=checkbox]').each(function () {
+                            if (this.nextSibling.nodeName != 'label') {
+                                $(this).after('<label for="' + this.id + '"></label>')
+                            }
+                        })
+                    })</script>
+        <!--Script para los datepicker-->
+        <script>
+                    $('.datepicker').pickadate({
+                        selectMonths: true, // Creates a dropdown to control month
+                        selectYears: 15 // Creates a dropdown of 15 years to control year
+                    });</script>
 
         <blockquote>Arrastre el marcador hacia la ubicación del evento</blockquote>
 
