Alta de comentarios y actualizacion parcial de listado de comentarios

--- a/GlobalEvents/GlobalEvents/Views/Events/CommentsView.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/CommentsView.cshtml
@@ -1,8 +1,8 @@
-﻿@model List<ViewModels.CommentsModel.Comments>
+﻿@model ViewModels.CommentsModel
 
 
 
-<!-- Modal Trigger -->
+@*<!-- Modal Trigger -->
 <a class="waves-effect waves-light btn" href="#modal1">Comentar</a>
 
 <!-- Modal Structure -->
@@ -23,27 +23,50 @@
         // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
         $('.modal').modal();
     });
-</script>
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+</script>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
 
-@foreach (var a in Model)
+
+
+
+@using (Html.BeginForm("Create", "Comments", FormMethod.Post, new { id = "commentForm" }))
 {
-    <div class="row">
-        <div class="col s12 m12">
-            <div class="card blue-grey darken-1">
-                <div class="card-content white-text">
-                    <p>
-                        @a.Comentario
-                    </p>
+
+        foreach (var a in Model.CommentsList)
+        {
+            <div class="row">
+                <div class="col s12 m12">
+                    <div class="card blue-grey darken-1">
+                        <div class="card-content white-text">
+                            <p>
+                                @a.Comentario
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
+        }
+
+        <div class="input-field">
+            <i class="material-icons prefix" id="Comentario">label</i>
+            @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.LabelFor(model => model.Comment)
+            @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
         </div>
-    </div>
+
+        @Html.HiddenFor(x => x.IdEvento)
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10 align-center">
+                <input type="submit" value="Crear" class="btn btn-primary" />
+            </div>
+        </div>
+    
+        <div>
+            @Html.ActionLink("Back to List", "Index", "Events")
+        </div>
 }
+
