--- a/GlobalEvents/GlobalEvents/Views/Comments/ComentariosReportados.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Comments/ComentariosReportados.cshtml
@@ -59,10 +59,9 @@
         <td>
             @Html.DisplayFor(modelItem => item.Observacion)
         </td>
+
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Revisar", "Details", new {  id=item.CommentId}) 
         </td>
     </tr>
 }
