--- a/GlobalEvents/GlobalEvents/Views/Home/Login.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/Login.cshtml
@@ -32,6 +32,18 @@
                 @Html.LabelFor(model => model.Recordarme, htmlAttributes: new { @class = "control-label col-md-2" })
             </div>
         </div>
+
+        <!--Script para los checkbox-->
+        <script>
+        $(document).ready(function () {
+            $('input[type=checkbox]').each(function () {
+                if (this.nextSibling.nodeName != 'label') {
+                    $(this).after('<label for="' + this.id + '"></label>')
+                }
+            })
+        })</script>
+
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Ingresar" class="btn btn-primary" />
