--- a/GlobalEvents/GlobalEvents/Views/Home/Login.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/Login.cshtml
@@ -4,54 +4,55 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div class="card">
+    <div class="card-content">
+        @using (Html.BeginForm("Login", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "bootstrap-admin-login-form", id = "loginForm" }))
+        {
+            @Html.AntiForgeryToken()
 
-<h2>Logearse</h2>
-@using (Html.BeginForm("Login", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "bootstrap-admin-login-form", id = "loginForm" }))
-{
-    @Html.AntiForgeryToken()
+            <div class="form-horizontal">
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(false, "Errores:", new { @class = "alert alert-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                <div class="input-field">
+                    <i class="material-icons prefix">perm_identity</i>
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.LabelFor(model => model.Email)
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="input-field">
+                    <i class="material-icons prefix">vpn_key</i>
+                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.LabelFor(model => model.Password)
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    @Html.CheckBoxFor(m => m.Recordarme)
+                    <label for="Destacado">Recordarme</label>
+                </div>
+
+                <!--Script para los checkbox-->
+                <script>
+                    $(document).ready(function () {
+                        $('input[type=checkbox]').each(function () {
+                            if (this.nextSibling.nodeName != 'label') {
+                                $(this).after('<label for="' + this.id + '"></label>')
+                            }
+                        })
+                    })</script>
+
+                <br />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10 align-center">
+                        <input type="submit" value="Ingresar" class="btn btn-primary" />
+                    </div>
+                </div>
+
             </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                <!--@Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" }) -->
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-10">
-                @Html.CheckBox("Recordarme", false, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.LabelFor(model => model.Recordarme, htmlAttributes: new { @class = "control-label col-md-2" })
-            </div>
-        </div>
+        }
 
-        <!--Script para los checkbox-->
-        <script>
-        $(document).ready(function () {
-            $('input[type=checkbox]').each(function () {
-                if (this.nextSibling.nodeName != 'label') {
-                    $(this).after('<label for="' + this.id + '"></label>')
-                }
-            })
-        })</script>
-
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Ingresar" class="btn btn-primary" />
-            </div>
+        <div class="right-align">
+            @Html.ActionLink("Crearse una cuenta", "Create", "Users")
         </div>
-    </div>
-}
-<div>
-    @Html.ActionLink("Crearse una cuenta", "Create", "Users") |
-    <a href="#" class="pull-right need-help">¿Necesita ayuda?</a><span class="clearfix"></span>
-</div>
