--- a/GlobalEvents/GlobalEvents/Views/Events/ReportarEvento.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/ReportarEvento.cshtml
@@ -1,7 +1,7 @@
-﻿@model RepositorioClases.CommentsReportes
+﻿@model RepositorioClases.EventsReportes
 
 @{
-    ViewBag.Title = "ReportarComentario";
+    ViewBag.Title = "ReportarEvento";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -11,18 +11,16 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>CommentsReportes</h4>
+        <h4>EventsReportes</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
            
             <div class="col-md-10">
-                @Html.HiddenFor(model => model.CommentId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CommentId, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.EventId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.EventId, "", new { @class = "text-danger" })
             </div>
         </div>
-
-
 
         <div class="form-group">
             @Html.LabelFor(model => model.Observacion, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -31,8 +29,6 @@
                 @Html.ValidationMessageFor(model => model.Observacion, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
