--- a/GlobalEvents/GlobalEvents/Views/Comments/ReportarComentario.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Comments/ReportarComentario.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>CommentsReportes</h4>
+        <h4>Reportar comentario</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -41,10 +41,6 @@
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
