--- a/GlobalEvents/GlobalEvents/Views/Events/CommentsView.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/CommentsView.cshtml
@@ -34,27 +34,44 @@
 
 @using (Html.BeginForm("Create", "Comments", FormMethod.Post, new { id = "commentForm" }))
 {
-        foreach (var a in Model.CommentsList)
+    <div class="row">
+        @foreach (var a in Model.CommentsList.OrderBy(z => z.Fecha).Where(z => z.ComentarioPadre == null))
         {
-            <div class="row">
-                <div class="col s12 m12">
-                    <div class="card blue-grey darken-1">
-                        <div class="card-content white-text">
-                            <p>
-                                @a.Comentario
-                            </p>
-                            <div>                                
-                                @Html.HiddenFor(x => x.CommentsList.SingleOrDefault(c=> c.CommentId == a.CommentId).CommentId)
-                                @Html.ActionLink("Reportar Comentario", "ReportarComentario", "Comments", new { id = a.CommentId}, null)
-                            </div>
+            <div class="col s12 m12">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <p>
+                            @a.Comentario
+                        </p>
+                        <div>
+                            @Html.HiddenFor(x => x.CommentsList.SingleOrDefault(c => c.CommentId == a.CommentId).CommentId)
+                            @Html.ActionLink("Reportar Comentario", "ReportarComentario", "Comments", new { id = a.CommentId }, null)
                         </div>
                     </div>
                 </div>
             </div>
+            foreach (var b in Model.CommentsList.OrderBy(z => z.Fecha).Where(z => z.ComentarioPadre == a.CommentId))
+            {
+                <div class="col s12 m1"></div>
+                <div class="col s12 m11">
+                    <div class="card blue-grey darken-1">
+                        <div class="card-content white-text">
+                            <p>
+                                @b.Comentario
+                            </p>
+                            <div>
+                                @Html.HiddenFor(x => x.CommentsList.SingleOrDefault(c => c.CommentId == b.CommentId).CommentId)
+                                @Html.ActionLink("Reportar", "ReportarComentario", "Comments", new { id = b.CommentId }, null)
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
         }
+    </div>
 
         <div class="input-field">
-            <i class="material-icons prefix" id="Comentario">label</i>
+            <i class="material-icons prefix" id="Comentario">chat_bubble</i>
             @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
             @Html.LabelFor(model => model.Comment)
             @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
@@ -66,10 +83,11 @@
             <div class="col-md-offset-2 col-md-10 align-center">
                 <input type="submit" value="Comentar" class="btn btn-primary" />
             </div>
+            <div>
+                @Html.ActionLink("Volver", "Index", "Events")
+            </div>
         </div>
     
-        <div>
-            @Html.ActionLink("Back to List", "Index", "Events")
-        </div>
+
 }
 
