--- a/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
@@ -163,7 +163,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - GlobalEvents.</p>
+            <p class="center-align">&copy; @DateTime.Now.Year - GlobalEvents.</p>
         </footer>
     </div>
 
